chore: refactor DroidUtils and update dependencies (#73)
* chore: refactor DroidUtils and update dependencies

- Move no-arg initDroidSignatures() into DroidSignaturesHolder (Sonar)
- Add explicit matchExtension flag to matchBinarySignatures()
- Update callers (SEDA/FNTC converters, tests) for the new signature
- Add jspecify dependency and bump version to 1.48
- Adapt to commons-csv (.get()) and Jackson (.properties()) API changes

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* chore: set request extension and use getFirst()

- Pass the file extension to FileSystemIdentificationRequest
- Use List.getFirst() instead of get(0) in Sedav22Converter

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>