@@ -1392,11 +1392,12 @@ class Sedav22Converter {
         // Note. The Signature Identifier does not fully support NIO2 (i.e. does not work with
         // jimfs)
         String ext = FilenameUtils.getExtension(binaryPath.getFileName().toString());
-        List<IdentificationResult> results = DroidUtils.matchBinarySignatures(binaryPath, ext);
+        List<IdentificationResult> results =
+            DroidUtils.matchBinarySignatures(binaryPath, ext, true);
         if (results.isEmpty()) {
           bdot.setFormatIdentification(toFormatIdentificationType("Unknown", null, null));
         } else {
-          IdentificationResult r = results.get(0);
+          IdentificationResult r = results.getFirst();
           String name =
               StringUtils.isAllBlank(r.getName(), r.getVersion())
                   ? null
